--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+async-generator==1.10
 attrs==19.3.0
 Automat==20.2.0
 backcall==0.2.0
@@ -6,6 +7,7 @@ bleach==3.1.5
 certifi==2020.6.20
 cffi==1.14.1
 chardet==3.0.4
+click==7.1.2
 colorama==0.4.3
 constantly==15.1.0
 cryptography==3.0
@@ -24,16 +26,20 @@ ipywidgets==7.5.1
 itemadapter==0.1.0
 jedi==0.17.2
 Jinja2==2.11.2
+joblib==0.16.0
 jsonschema==3.2.0
 jupyter==1.0.0
 jupyter-client==6.1.6
 jupyter-console==6.1.0
 jupyter-core==4.6.3
+jupyter-server==0.1.1
+jupyterlab-pygments==0.1.1
 lxml==4.5.2
 MarkupSafe==1.1.1
 mistune==0.8.4
 nbconvert==5.6.1
 nbformat==5.0.7
+nltk==3.5
 notebook==6.0.3
 numpy==1.19.1
 packaging==20.4
@@ -41,19 +47,25 @@ pandas==1.0.5
 pandocfilters==1.4.2
 parsel==1.6.0
 parso==0.7.1
+pdfminer==20191125
 pickleshare==0.7.5
+Pillow==7.2.0
 prometheus-client==0.8.0
 prompt-toolkit==3.0.5
 Protego==0.1.16
+pyaes==1.6.1
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycparser==2.20
+pycryptodome==3.9.8
 PyDispatcher==2.0.5
 Pygments==2.6.1
 PyHamcrest==2.0.2
+PyMySQL==0.10.0
 pyOpenSSL==19.1.0
 pyparsing==2.4.7
 pyrsistent==0.16.0
+pytesseract==0.3.4
 python-dateutil==2.8.1
 pytz==2020.1
 pywin32==228
@@ -62,16 +74,26 @@ pyzmq==19.0.1
 qtconsole==4.7.5
 QtPy==1.9.0
 queuelib==1.5.0
+regex==2020.7.14
 requests==2.24.0
+rsa==4.6
+Scrapy==2.2.1
+selenium==3.141.0
 Send2Trash==1.5.0
 service-identity==18.1.0
 six==1.15.0
+socks==0
 soupsieve==2.0.1
+Telethon==1.16.0
 terminado==0.8.3
 testpath==0.4.4
 tornado==6.0.4
+tqdm==4.48.0
 traitlets==4.3.3
+Twisted @ file:///D:/Games/learn-web-scraping/Twisted-20.3.0-cp38-cp38-win_amd64.whl
+twitter==1.18.0
 urllib3==1.25.10
+voila==0.1.21
 w3lib==1.22.0
 wcwidth==0.2.5
 webencodings==0.5.1
