--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
+appdirs==1.4.4
 async-generator==1.10
 attrs==19.3.0
 Automat==20.2.0
 backcall==0.2.0
 beautifulsoup4==4.9.1
 bleach==3.1.5
+bs4==0.0.1
 certifi==2020.6.20
 cffi==1.14.1
 chardet==3.0.4
@@ -15,6 +17,7 @@ cssselect==1.1.0
 decorator==4.4.2
 defusedxml==0.6.0
 entrypoints==0.3
+fake-useragent==0.1.11
 html5lib==1.1
 hyperlink==19.0.0
 idna==2.10
@@ -36,6 +39,7 @@ jupyter-server==0.1.1
 jupyterlab-pygments==0.1.1
 lxml==4.5.2
 MarkupSafe==1.1.1
+MechanicalSoup==0.12.0
 mistune==0.8.4
 nbconvert==5.6.1
 nbformat==5.0.7
@@ -45,6 +49,7 @@ numpy==1.19.1
 packaging==20.4
 pandas==1.0.5
 pandocfilters==1.4.2
+parse==1.16.0
 parsel==1.6.0
 parso==0.7.1
 pdfminer==20191125
@@ -59,11 +64,15 @@ pyasn1-modules==0.2.8
 pycparser==2.20
 pycryptodome==3.9.8
 PyDispatcher==2.0.5
+pyee==7.0.2
 Pygments==2.6.1
 PyHamcrest==2.0.2
 PyMySQL==0.10.0
 pyOpenSSL==19.1.0
 pyparsing==2.4.7
+PyPDF2==1.26.0
+pyppeteer==0.2.2
+pyquery==1.4.1
 pyrsistent==0.16.0
 pytesseract==0.3.4
 python-dateutil==2.8.1
@@ -76,6 +85,7 @@ QtPy==1.9.0
 queuelib==1.5.0
 regex==2020.7.14
 requests==2.24.0
+requests-html==0.10.0
 rsa==4.6
 Scrapy==2.2.1
 selenium==3.141.0
@@ -92,10 +102,14 @@ tqdm==4.48.0
 traitlets==4.3.3
 Twisted @ file:///D:/Games/learn-web-scraping/Twisted-20.3.0-cp38-cp38-win_amd64.whl
 twitter==1.18.0
+twitter-scraper==0.4.4
 urllib3==1.25.10
 voila==0.1.21
 w3lib==1.22.0
 wcwidth==0.2.5
 webencodings==0.5.1
+websockets==8.1
 widgetsnbextension==3.5.1
+xlrd==1.2.0
+XlsxWriter==1.3.1
 zope.interface==5.1.0
